# hk-todo

./: Cargo.toml
crates/dart-todo/: Cargo.toml  flutter_rust_bridge.yaml
crates/dart-todo/src/: lib.rs
crates/py-todo/: Cargo.toml  pyproject.toml
crates/py-todo/src/: lib.rs
crates/todo/: Cargo.toml  flutter_rust_bridge.yaml
crates/todo/python/: mod.rs
crates/todo/src/: frb_generated.rs  lib.rs
crates/todo/src/application/: add_todo_handler.rs  change_todo_state_handler.rs  get_todos_handler.rs  mod.rs
crates/todo/src/dart/: logo.rs  mod.rs
crates/todo/src/domain/todo/: mod.rs  todo_entity.rs  todo_error.rs  todo_event.rs  todo_repository.rs  todo_state.rs
crates/todo/src/infrastructure/repositories/todo/: inmemory_todo_repository.rs  mod.rs  sql_todo_repository.rs
crates/todo/src/python/: mod.rs
crates/todo/tests/: add_todo.rs  change_todo_state.rs
crates/todo/tests/common/: mock_todo_repository.rs  mod.rs
dart/: .gitignore  README.md  pubspec.yaml
dart/.dart_tool/: package_config.json  package_graph.json
dart/lib/: todo.dart
dart/lib/bindings/: .gitkeep
dart/test/: README.md  add_todo_handler_test.dart  change_todo_state_handler_test.dart  get_todos_handler_test.dart  test_helper.dart
docs/: todo-domain-model.md  todo_dart.md  todo_flutter.md  todo_pyo3.md
ui/todo-react/: package.json
