[workspace]
resolver = "3"
members = [
    "crates/todo",
    "crates/py-todo",
]


[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-build-config = "0.27.2"