[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[lib]
name = "todo"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
pyo3 = { workspace = true, optional = true }
flutter_rust_bridge = { workspace = true, optional = true }

[features]
default = []
python = ["pyo3"]
dart = ["flutter_rust_bridge/dart"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

